caso-3/3-db-prod.sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  labels:
    app: mysqldb
spec:
  ports:
    - port: 3306
      name: mysqldb
  selector:
    app: mysqldb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqldb
spec:
  selector:
    matchLabels:
      app: mysqldb
  serviceName: "mysqldb"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
        - name: mysqldb
          image: mysql:9.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
              name: mysqldb
          volumeMounts:
            - mountPath: "/docker-entrypoint-initdb.d/"
              name: sql-dump-volume     
      volumes:
        - name: secret-volume
          secret:
            secretName: mysql-secret
        - name: sql-dump-volume
          persistentVolumeClaim:
            claimName: sql-dump-pvc
  volumeClaimTemplates:
    - metadata:
        name: mysqldb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
