caso-3/5-metabase-prod.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:v0.50.20.5
          imagePullPolicy: Always
          ports:
            - name: metabase
              containerPort: 3000

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10

      volumes:
        - name: secret-volume
          secret:
            secretName: mysql-secret
        - name: config-volume
          configMap:
            name: metabase-config
---
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: metabase
