caso-3/6-metabase-prod.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: santiago-graffigna-web.my.kube.um.edu.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metabase-service
                port:
                  number: 80
